correct mistakes from exam

--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
 </head>
 <body>
 <header class="header">
+<div class="container">
 	<div class="nav"><div class="logo"></div>
-	<div class="nav__menu">
+	<nav class="nav__menu">
 	<ul>
 		<li><a href="#">hello</a></li>
 		<li><a href="#services">services</a></li>
 		<li><a href="#item">aboutus</a></li>
 		<li><a href="#work">our work</a></li>
 		<li><a href="#footer">contact us</a></li>
-	</ul></div>
+	</ul></nav>
 	</div>
+	<div>
 	<h1 class="title">we're creative agency</h1>
 	<div class="subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
 Aenean commodo ligula eget dolor. Aenean massa.</div>
+	</div>
 	<div class="scrol"><a href="#footer"><svg xmlns="http://www.w3.org/2000/svg" width="92" height="92" viewBox="0 0 92 92">
   <defs>
     <style>
@@ -36,10 +39,12 @@ Aenean commodo ligula eget dolor. Aenean massa.</div>
   </defs>
   <path id="slider.svg" class="slider" d="M754,808a46,46,0,1,1,46,46A46.053,46.053,0,0,1,754,808Zm88.88,0A42.881,42.881,0,1,0,800,850.884,42.929,42.929,0,0,0,842.876,808Zm-59.031-5.776a1.561,1.561,0,0,1,2.665-1.1l14.148,14.134,14.148-14.134a1.561,1.561,0,0,1,2.208,2.208l-15.251,15.232a1.557,1.557,0,0,1-2.208,0L784.3,803.332A1.559,1.559,0,0,1,783.845,802.227Z" transform="translate(-754 -762)"/>
 </svg></a></div>
+</div>
 </header>
 <section class="services" id="services">
+<div class="container">
 	<div class="ba-grid">
-		<h1 class="section_title">our services</h1>
+		<h2 class="section_title">our services</h2>
 	</div>
 	<div class="ba-grid">
 		<div class="ba-width-1-3 service">
@@ -61,11 +66,13 @@ ilabore et dolore.</p>
 ilabore et dolore.</p>
 		</div>
 	</div>
+	</div>
 </section>
 <section class="item" id="item">
+<div class="container">
 	<div class="ba-grid">
 		<div class="ba-width-1-2 content">
-			<h1 class="content__title">dolore magna aliqua</h1>
+			<h2 class="content__title">dolore magna aliqua</h2>
 			<p class="contnent__descr">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
 sed do eiusmod tempor incididunt ut labore
 et dolore magna aliqua.
@@ -76,10 +83,12 @@ et dolore magna aliqua.
 			<img class="" src="img/phone.png" alt="">
 		</div>
 	</div>
+	</div>
 </section>
 <section class="work" id="work">
+<div class="container">
 	<div class="ba-grid">
-		<h1 class="section_title">our work</h1>
+		<h2 class="section_title">our work</h2>
 	</div>
 	<div class="ba-grid">
 		<div class="ba-width-1-3">
@@ -112,9 +121,11 @@ et dolore magna aliqua.
 	</div>
 	<div class="ba-grid">
 		<button class="button work_button">more</button>
+		</div>
 	</div>
 </section>
 <footer class="footer">
+<div class="container">
 	
 <h1 class="section_title section_title--white">get in touch</h1>
 		<ul class="socials">
@@ -125,11 +136,12 @@ et dolore magna aliqua.
 			<li><a href=""><i class="fa fa-behance" aria-hidden="true"></i></a></li>
 		</ul>
 <form action="" class="form">
-	<label for="" class="label"><input type="text" placeholder="Name" class="input input--cropwidth">
-	<input type="text" placeholder="Email" class="input input--cropwidth"></label>
-	<label for="" class="label"><input type="email" placeholder="Message" class="input input--fullwidth"></label>
+	<input type="text" placeholder="Name" class="input input--cropwidth">
+	<input type="text" placeholder="Email" class="input input--cropwidth">
+	<input type="email" placeholder="Message" class="input input--fullwidth">
 </form>
 <button class="button footer_button" id="footer">send</button>
+</div>
 </footer>
 
 
