--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Aenean commodo ligula eget dolor. Aenean massa.</div>
 <section class="services" id="services">
 <div class="container">
 	<div class="ba-grid">
-		<h2 class="section_title">our services</h2>
+		<h2 class="section-title">our services</h2>
 	</div>
 	<div class="ba-grid">
 		<div class="ba-width-1-3 service">
@@ -79,7 +79,7 @@ et dolore magna aliqua.
 			</p>
 			<a href="#">more</a>
 		</div>
-		<div class="ba-width-1-2 item_image">
+		<div class="ba-width-1-2 item-image">
 			<img class="" src="img/phone.png" alt="">
 		</div>
 	</div>
@@ -88,12 +88,12 @@ et dolore magna aliqua.
 <section class="work" id="work">
 <div class="container">
 	<div class="ba-grid">
-		<h2 class="section_title">our work</h2>
+		<h2 class="section-title">our work</h2>
 	</div>
 	<div class="ba-grid">
 		<div class="ba-width-1-3">
 			<div class="works">
-				<img class="works_image" src="img/work1.jpg" alt="">
+				<img class="works-image" src="img/work1.jpg" alt="">
 				<div class="overlay">
 				<h3 class="overlay__title">Kinderen planet</h3>
 				<a class="overlay__link" href="#"></a>
@@ -102,7 +102,7 @@ et dolore magna aliqua.
 		</div>
 		<div class="ba-width-1-3">
 			<div class="works">
-				<img class="works_image" src="img/work2.jpg" alt="">
+				<img class="works-image" src="img/work2.jpg" alt="">
 				<div class="overlay">
 				<h3 class="overlay__title">Jetindus</h3>
 				<a class="overlay__link" href="#"></a>
@@ -111,7 +111,7 @@ et dolore magna aliqua.
 		</div>
 		<div class="ba-width-1-3">
 			<div class="works">
-				<img class="works_image" src="img/work3.jpg" alt="">
+				<img class="works-image" src="img/work3.jpg" alt="">
 				<div class="overlay">
 				<h3 class="overlay__title">Trimplement</h3>
 				<a class="overlay__link" href="#"></a>
@@ -120,14 +120,14 @@ et dolore magna aliqua.
 		</div>
 	</div>
 	<div class="ba-grid">
-		<button class="button work_button">more</button>
+		<button class="button work-button">more</button>
 		</div>
 	</div>
 </section>
 <footer class="footer">
 <div class="container">
 	
-<h1 class="section_title section_title--white">get in touch</h1>
+<h1 class="section-title section-title--white">get in touch</h1>
 		<ul class="socials">
 			<li><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 			<li><a href=""><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -140,7 +140,7 @@ et dolore magna aliqua.
 	<input type="text" placeholder="Email" class="input input--cropwidth">
 	<input type="email" placeholder="Message" class="input input--fullwidth">
 </form>
-<button class="button footer_button" id="footer">send</button>
+<button class="button footer-button" id="footer">send</button>
 </div>
 </footer>
 
